--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weconnect-conecting toghether</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js   "></script>
     <style>
         * {
             margin: 0;
@@ -569,8 +567,7 @@
     </div>
 
     <script>
-        const socket = io('/', { transports: ['websocket'] });
-
+        let socket = io();
         let currentRoom = 'General';
         let username = document.getElementById('username').textContent;
         let roomMessages = {};
